<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@color/action_bar_background_color"
    tools:context="com.genimous.peopleoutsourcing.activity.MainActivity">

    <TextView
        android:id="@+id/baseFragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:text="Title"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/baseFragmentRightText"
            android:text="@string/baseFragmentButtonRight1"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="8dp"
            android:background="@color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/baseFragmentRightText"
            android:text="@string/baseFragmentButtonRight2"
        />
        <View
            android:layout_width="1dp"
            android:layout_height="8dp"
            android:background="@color/white"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/baseFragmentRightText"
            android:text="@string/baseFragmentButtonRight3"
        />
    </LinearLayout>


</RelativeLayout>
